# finance-manager

./: Makefile  README.md  db.sqlite3  pyproject.toml
FinanceManager/: settings.py
fin_manager/: forms.py  models.py  test_views.py  tests.py  views.py
fin_manager/static/css/: login_styles.css  style.css
fin_manager/templates/expenses/: expense_list.html
fin_manager/templates/fin_manager/: home.html
fin_manager/templates/registration/: login.html  register.html
